--- a/ContactFrom_v5/index.html
+++ b/ContactFrom_v5/index.html
@@ -41,7 +41,7 @@
 
 				<div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Name">
 					<span class="label-input100">NOME COMPLETO *</span>
-					<input class="input100" type="text" name="name" placeholder="Enter Your Name">
+					<input class="input100" type="text" name="name" placeholder="Digite seu nome completo">
 				</div>
 
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Email (e@a.x)">
