--- a/ContactFrom_v5/index.html
+++ b/ContactFrom_v5/index.html
@@ -44,7 +44,7 @@
 					<input class="input100" type="text" name="name" placeholder="Digite seu nome completo">
 				</div>
 
-				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Email (e@a.x)">
+				<div class="wrap-input100 bg1 rs1-wrap-input100">
 					<span class="label-input100">Endereço *</span>
 					<input class="input100" type="text" name="endereço" placeholder="Digite seu endereço">
 				</div>
