--- a/ContactFrom_v5/index.html
+++ b/ContactFrom_v5/index.html
@@ -48,52 +48,57 @@
 					<input class="input100" type="text" name="name" maxlength="40" placeholder="Digite seu nome completo">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" id="cpf1" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" id="cpf1" data-validate="Campo obrigatório">
 					<span class="label-input100">Cpf *</span>
-					<input class="input100" type="text" name="cpf" id="cpf" maxlength="14" placeholder="000.000.000-00" autocomplete="off">
+					<input class="input100" type="text" name="cpf" id="cpf" maxlength="14" placeholder="Digite seu cpf" autocomplete="off">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Data de nascimento *</span>
 					<input class="input100" type="date" input name="data" placeholder="Digite sua data de nascimento">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
-					<span class="label-input100">WhatsApp *</span>
-					<input class="input100" type="text" name="telefone" maxlength="10" placeholder="Digite seu número de contato">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
+					<span class="label-input100">E-mail *</span>
+					<input class="input100" type="text" name="email" maxlength="20" placeholder="Digite seu E-mail">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
+					<span class="label-input100">WhatsApp *</span>
+					<input class="input100" type="text" name="telefone" maxlength="10" placeholder="Exemplo.:5199999999">
+				</div>
+
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Contrato *</span>
 					<input class="input100" type="text" name="contrato" maxlength="50" placeholder="Digite o número do contrato">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Cidade *</span>
 					<input class="input100" type="text" name="cidade" maxlength="50" placeholder="Digite sua cidade">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Endereço *</span>
 					<input class="input100" type="text" name="endereço" maxlength="40" placeholder="Digite seu endereço">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Cep *</span>
 					<input class="input100" type="text" name="cep" maxlength="20" placeholder="Digite seu cep">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Vencimento *</span>
 					<input class="input100" type="date" input name="data" placeholder="Digite a data do vencimento">
 				</div>
 
-				<div class="wrap-input100 bg1 rs1-wrap-input100" data-validate="Campo obrigatório">
+				<div class="wrap-input100 bg1 rs1-wrap-input100 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Valor de negociação *</span>
 					<input class="input100" type="text" name="negociação" maxlength="50" placeholder="Digite o valor da negociação">
 				</div>
 
-				<div class="wrap-input100 input100-select bg1" data-validate="Campo obrigatório">
+				<div class="wrap-input100 input100-select bg1 validate-input" data-validate="Campo obrigatório">
 					<span class="label-input100">Vendedor *</span>
 					<div>
 						<select class="js-select2" name="vendedor" maxlength="20">
